--- a/packages/vite/__tests__/react-test/src/components/Panel/Panel.module.css
+++ b/packages/vite/__tests__/react-test/src/components/Panel/Panel.module.css
@@ -8,6 +8,8 @@
   }
 
   .panel-header {
+
+    @media (max-width: 300px) { background-color: green; }
     background-color: grey;
 
     .panel-box { padding: 0.5em; }
